2009-11-09  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Darin Adler.

        Compiler warnings in InspectorResource.h
        https://bugs.webkit.org/show_bug.cgi?id=29231

        Fix compilation warnings by removing addition operation on an enum type.

        * inspector/InspectorResource.h:
        (WebCore::InspectorResource::):
        (WebCore::InspectorResource::Changes::hasChange):
        (WebCore::InspectorResource::Changes::set):
        (WebCore::InspectorResource::Changes::setAll):

Canonical link: https://commits.webkit.org/42130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50700 268f45cc-cd09-0410-ab3c-d52691b4dbfc